@@ -848,7 +848,7 @@ sint16 Client::acmod() {
 // ac1 and ac2 are probably the damage migitation and damage avoidance numbers, not sure which is which.
 // I forgot to include the iksar defense bonus and i cant find my notes now...
 // AC from spells are not included (cant even cast spells yet..)
-sint16 Client::CalcAC() {
+sint32 Client::CalcAC() {
 
 	// new formula
 	int avoidance = (acmod() + ((GetSkill(DEFENSE) + itembonuses.HeroicAGI/10)*16)/9);
