@@ -74,7 +74,7 @@ Mob::Mob(const char*   in_name,
          int8    in_light,
 		 int8	 in_texture,
 		 int8	 in_helmtexture,
-		 int16	 in_ac,
+		 sint32	 in_ac,
 		 int16	 in_atk,
 		 int16	 in_str,
 		 int16	 in_sta,
