@@ -635,11 +635,13 @@ void Mob::RogueBackstab(Mob* other, bool min_damage)
 	
 	if(primaryweapondamage > 0){
 		if(level > 25){
-			max_hit = (((2*backstab_dmg) * GetDamageTable(BACKSTAB) / 100) * 10 * GetSkill(BACKSTAB) / 355)  + ((level-25)/3) + 1;
+			float max_hit_damage = (((2*backstab_dmg) * GetDamageTable(BACKSTAB) / 100) * 10 * GetSkill(BACKSTAB) / 355)  + ((level-25)/3) + 1;
+			max_hit = (sint32)max_hit_damage;
 			hate = 20 * backstab_dmg * GetSkill(BACKSTAB) / 355;
 		}
 		else{
-			max_hit = (((2*backstab_dmg) * GetDamageTable(BACKSTAB) / 100) * 10 * GetSkill(BACKSTAB) / 355) + 1;
+			float max_hit_damage = (((2*backstab_dmg) * GetDamageTable(BACKSTAB) / 100) * 10 * GetSkill(BACKSTAB) / 355) + 1;
+			max_hit = (sint32)max_hit_damage;
 			hate = 20 * backstab_dmg * GetSkill(BACKSTAB) / 355;
 		}
 
@@ -826,19 +828,19 @@ void Client::RangedAttack(Mob* other) {
 					WDmg = 0;
 				if(ADmg < 0)
 					ADmg = 0;
-
-				uint32 MaxDmg = (RuleR(Combat, ArcheryBaseDamageBonus)*(WDmg+ADmg)*GetDamageTable(ARCHERY)) / 100;
+				float MaxDmg_Float = (RuleR(Combat, ArcheryBaseDamageBonus)*(WDmg+ADmg)*GetDamageTable(ARCHERY)) / 100;
+				uint32 MaxDmg = MaxDmg_Float;
 				sint32 hate = ((WDmg+ADmg));
 							
 				switch(GetAA(aaArcheryMastery)) {
 					case 1:
-						MaxDmg = MaxDmg * 130/100;
+						MaxDmg = (float(MaxDmg * 130/100));
 						break;
 					case 2:
-						MaxDmg = MaxDmg * 160/100;
+						MaxDmg = (float(MaxDmg * 160/100));
 						break;
 					case 3:
-						MaxDmg = MaxDmg * 2;
+						MaxDmg = (float(MaxDmg * 2));
 						break;
 				}
 				
@@ -850,16 +852,16 @@ void Client::RangedAttack(Mob* other) {
 					{
 						if(GetTarget()->IsNPC() && !GetTarget()->IsMoving() && !GetTarget()->IsRooted())
 						{
-							MaxDmg *= 2;
-							hate *= 2;
+							MaxDmg *= (float)2;
+							hate *= (float)2;
 							mlog(COMBAT__RANGED, "Ranger. Double damage success roll, doubling damage to %d", MaxDmg);
 							Message_StringID(MT_CritMelee, BOW_DOUBLE_DAMAGE);
 						}
 					}
 					else
 					{
-						MaxDmg *= 2;
-						hate *= 2;
+						MaxDmg *= (float)2;
+						hate *= (float)2;
 						mlog(COMBAT__RANGED, "Ranger. Double damage success roll, doubling damage to %d", MaxDmg);
 						Message_StringID(MT_CritMelee, BOW_DOUBLE_DAMAGE);
 					}
@@ -880,9 +882,9 @@ void Client::RangedAttack(Mob* other) {
 				int minDmg = 1;
 				if(GetLevel() > 25){
 					//twice, for ammo and weapon
-					TotalDmg += (2*((GetLevel()-25)/3));
-					minDmg += (2*((GetLevel()-25)/3));
-					hate += (2*((GetLevel()-25)/3));
+					TotalDmg += (float)(2*((GetLevel()-25)/3));
+					minDmg += (float)(2*((GetLevel()-25)/3));
+					hate += (float)(2*((GetLevel()-25)/3));
 				}
 
 				GetTarget()->MeleeMitigation(this, TotalDmg, minDmg);
